Tue Apr 14 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* export.c : Fix 3d png export (and 3d preview bars in appearance dialog)

Thu Apr 13 01:37:29 CEST 2006 Christian Anthon
	* Make Jon's sse-splitup actually compile on linux. Moved
	SSE_Support() to neuralnet.c to make makeweights compile. Added some
	autoconf magick.

Tue Apr 12 07:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* backgammon.h +various: Tidy up min/max to use MIN/MAX everywhere
	
Tue Apr 11 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c: Minor bugfix when hitting chequers in edit mode
	
Tue Apr 11 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* rollout.c: Only update rollout stats once a second at most
	
Tue Apr 11 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
	* gtkfile.c: Fix bug changing met with gtk 2

Mon Apr 10 09:49:03 CEST 2006 Christian Anthon <anthon@kiku.dk>
	* gtkgame.c: Fixed typo causing crash in RelationalAddMatch

Fri Apr  7 13:46:58 CEST 2006 Christian Anthon <anthon@kiku.dk>
	* gnubg.c, gtkgame.c: Fix problems with help menus in gtk
	* gtkgame.c         : Enable add game to relational in gtk(thx MaX)
	* database.py       : Create games database when appropriate(thx MaX) 
	* html.c            : small improvement on previous

Thu Apr  6 22:30:58 CEST 2006 Christian Anthon <anthon@kiku.dk>
	* html.c make it clearer who is who when exporting to gammonline

Wed Mar 29 10:13:39 CEST 2006 Christian Anthon <anthon@kiku.dk>
	*  **/Makefile.in aclocal.m4 config.h.in configure: Sync auto-tools
	files.

Tue Mar 28 23:45:53 CEST 2006 Christian Anthon <anthon@kiku.dk>
	* gnubg.game.mysql gnubg.game.sql gnubg.sql: Fix switched order of
	normalised/unnormalised for some error_, so that it matches
	database.py.

Tue Mar 28 23:37:40 CEST 2006 Christian Anthon <anthon@kiku.dk>
	* remove m4/gettext.m4

Tue Mar 28 23:24:14 CEST 2006 Christian Anthon <anthon@kiku.dk>
	* format.c eval.c analysis.c: Clean up isCloseCube and lower limit to